Correct admin styling - Add missing colors

--- a/web/themes/custom/sand/sass/6-helpers/_color-classes.scss
+++ b/web/themes/custom/sand/sass/6-helpers/_color-classes.scss
@@ -203,3 +203,17 @@ $color-values: $cerulean, $robin, $sunshade, $schoolbus, $spruce, $westar, $teal
     background: $color-value !important;
   }
 }
+
+// Status indicators
+
+.status-available, .status-open {
+background-color: $success !important;
+}
+
+.status-unavailable, .status-closed {
+background-color: $error !important;
+}
+
+.status-impacted {
+background-color: $sunshade !important;
+}
